@@ -282,7 +282,9 @@ The code is generated from psddl/src/DdlHdf5Translator.py
 
 We use the DDL description of the Epics Pv to 'unroll' the 14 epicsPv
 types that we will write into simple 'flat' structures that make it easier
-to generate the hdf5 types.  These 14 types are EpicsPvCtrl* and EpicsPvTime*
+to generate the hdf5 types.  Flat except for stamp, so as not to deviate from
+the previous schema, we do not unroll the stamp field into seconds past the epoch
+and nanoseconds. These 14 types are EpicsPvCtrl* and EpicsPvTime*
 where * is one of String, Short, Float, Enum, Char, Long or Double.
 
 The DDL defines these classes via a C++ class hierarchy, and there are some
@@ -293,7 +295,7 @@ EpicsPvTimeDouble  -> EpicsPvTimeHeader -> EpicsPvHeader
 moreover, classes can have compound types, for instance EpicsPvTimeHeader includes an
 instance of epicsTimeStamp as an attribute.
 
-For each of the 14 classes, we define an flat structure that we can fill for Hdf5
+For each of the 14 classes, we define a flat structure (except for stamp) that we can fill for Hdf5
 translation, a function to produce the hdf5 type, and a function to fill the structure from
 the appropriate Psana object that we will obtain from the epics store.
 
@@ -317,6 +319,11 @@ namespace Unroll {
 struct epicsTimeStamp {
   uint32_t secPastEpoch;
   uint32_t nsec;
+  epicsTimeStamp & operator=(const Psana::Epics::epicsTimeStamp & rhs) {
+    secPastEpoch = rhs.sec();
+    nsec = rhs.nsec();
+    return *this;
+ };
 };
 
 {% for epicsPv in epicsPvs %}
@@ -350,7 +357,9 @@ void copyValueFldToUnrolled < Unroll::EpicsPvCtrlString >
        (const Unroll::EpicsPvCtrlString::PsanaSrc &psanaVar, int16_t el, 
         Unroll::EpicsPvCtrlString & unrollBuffer);
 
-{% for epicsPv in epicsPvs %}
+hid_t createH5TypeId_epicsTimeStamp();
+
+ {% for epicsPv in epicsPvs %}
 hid_t createH5TypeId_{{epicsPv['name']}}({{epicsPv['type_create_args']}});
 {% endfor %} 
 
@@ -373,6 +382,8 @@ hid_t createH5TypeId_{{epicsPv['name']}}({{epicsPv['type_create_args']}});
 :  
 :  psana_types - list of the psana types that we generate converters for
 :
+/* Do not edit this file.  It is created by a code generator. */
+
 #include <string.h>
 #include "MsgLogger/MsgLogger.h"
 #include "Translator/epics.ddl.h"
@@ -428,6 +439,17 @@ void copyValueFldToUnrolled < Unroll::EpicsPvCtrlString >
   strncpy(unrollBuffer.value, psanaVar.value(el), Psana::Epics::MAX_STRING_SIZE);
 }
 
+hid_t createH5TypeId_epicsTimeStamp() {
+  hid_t typeId = H5Tcreate(H5T_COMPOUND, sizeof(Unroll::epicsTimeStamp));
+  if (typeId < 0) MsgLog(logger, fatal, "Failed to create h5 type id for epicsTimeStamp");
+  herr_t status = 0;
+  status = std::min(status, H5Tinsert(typeId, "secPastEpoch", offsetof(Unroll::epicsTimeStamp, secPastEpoch), H5T_NATIVE_INT32));
+  status = std::min(status, H5Tinsert(typeId, "nsec", offsetof(Unroll::epicsTimeStamp, nsec), H5T_NATIVE_INT32));
+  if (status < 0) MsgLog(logger, fatal, "error inserting field into h5 typeId for epicsTimeStamp"); 
+  return typeId;
+}
+
+ 
 {% for epicsPv in epicsPvs %}
 hid_t createH5TypeId_{{epicsPv['name']}}({{epicsPv['type_create_args']}}) {
   hid_t typeId = H5Tcreate(H5T_COMPOUND, sizeof(Unroll::{{epicsPv['name']}}));
